Will update angular app

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #bbc4ef; /* Replace with your desired background color */
+    margin: 0; /* Optionally remove default body margin */
+}
